CHG Fixing semaphore error

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -14,10 +14,10 @@ blocks:
             - python -m pip install --upgrade pip
             - checkout
             - ls
-            - pip install -r CaesarCipher/requirements.txt
+            - pip install -r requirements.txt
             - pip install flake8
             - 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics'
             - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
             - pip install pytest
             - cd CaesarCipher
-            - pytest -q CaesarCipher//test_unit.py -o log_cli=true
+            - pytest -q CaesarCipher/test_unit.py -o log_cli=true
