--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -11,12 +11,12 @@ blocks:
         - name: pytest
           commands:
             - echo $SEMAPHORE_PIPELINE_ID
-            - python -m pip install --upgrade pip
+            - sem-version python 3.10.2
             - checkout
-            - ls
+            - python -m pip install --upgrade pip
             - pip install -r requirements.txt
             - pip install flake8
-            - 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics'
+            - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
             - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
             - pip install pytest
             - pytest -q CaesarCipher/test_unit.py -o log_cli=true
