--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,4 +19,5 @@ blocks:
             - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
             - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
             - pip install pytest
-            - pytest -q CaesarCipher/test_unit.py -o log_cli=true
+            - cd CaesarCipher
+            - pytest -q test_unit.py -o log_cli=true
