--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,6 +19,9 @@ blocks:
             - 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics'
             - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
             - pip install pytest
+            - cd Vigenere
+            - pytest -q test_unit.py -o log_cli=true --junitxml=results.xml
+            - cd ..
             - cd CaesarCipher
             - pytest -q test_unit.py -o log_cli=true --junitxml=results.xml
             - test-results publish results.xml
